test/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kubeserve.example.com
    http:
      paths:
      - backend:
          serviceName: kubeserve2-lb
          servicePort: 80
  - host: app.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-lb
          servicePort: 80
  - http:
      paths:
      - backend:
          serviceName: httpd
          servicePort: 80

  - http:
      paths:
      - path: /kubeserve
        pathType: Prefix
        backend:
          serviceName: kubeserve2-lb
          servicePort: 80
