test/kubeserve2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeserve2-deployment
spec:
  selector:
    matchLabels:
      app: kubeserve2
  replicas: 2
  template:
    metadata:
      labels:
        app: kubeserve2
    spec:
      affinity:
        podAntiAffinity:                                    #Avoid co-location of all replicas on the same node
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - store
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: kubeserve2
        image: chadmcrowell/kubeserve2:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: kubeserve2-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubeserve2
